# lab1_actions

./: CMakeLists.txt
.github/workflows/: release.yml
